[package]
name = "rsh"
version = "0.1.0"
description = "rsh: Rust compile shell script(or expect script) to Rust code and binary."
authors = ["Yukang <moorekang@gmail.com>"]
edition = "2018"
keywords = ["shell", "binary", "script"]
homepage = "https://github.com/chenyukang"
repository  = "https://github.com/chenyukang/rsh"
readme      = "README.md"
license = "MIT"


[dependencies]
rust-crypto = "^0.2"
clap = "2"
dialoguer = "0.3.0"