[package]
name = "rshc"
version = "0.1.3"
description = "rshc: Rust compile shell script(or expect script) to Rust code and binary."
authors = ["Yukang <moorekang@gmail.com>"]
edition = "2018"
keywords = ["shell", "binary", "script"]
homepage = "https://github.com/chenyukang/rshc"
repository  = "https://github.com/chenyukang/rshc"
readme      = "README.md"
license = "MIT"

[dependencies]
clap = "2"
rand = "0.6.1"
dialoguer = "0.3.0"


